add support for cookie

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
     <head>
-        
+       <meta charset="utf-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+       <title>apiApp</title>
+       <link rel="stylesheet" href="../../public/styles/index.css" type="text/css" />
     </head>
     <body>
-        <%= 2+2%>
+    <div class="cointainer">
+        <header></header>
+        <nav>
+            <ul>
+                
+            </ul>
+            <li><a href="/admin">Zaloguj</a></li>
+            <li><a href="/api">Api</a></li>
+        </nav>
+        <section>
+            
+        </section>
+        <footer>
+            
+        </footer>
+    </div>
     </body>
 </html>
