changes in homepage

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -4,20 +4,57 @@
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
        <title>apiApp</title>
-       <link rel="stylesheet" href="../../public/styles/index.css" type="text/css" />
+       <link rel="stylesheet" href="../../public/styles/style.css" type="text/css" />
     </head>
     <body>
     <div class="cointainer">
-        <header></header>
         <nav>
             <ul>
-                
+                <li class="navLeft"><a href="#">API</a></li>
+                <li class="navLeft"><a href="#">ZALOGUJ</a></li>
+                <li class="navRight active"><a href="#">HOME</a></li>
             </ul>
-            <li><a href="/admin">Zaloguj</a></li>
-            <li><a href="/api">Api</a></li>
         </nav>
+        <header>
+            <h1>COMAPNY NAME</h1>    
+        </header>
         <section>
-            
+            <div class="sub">
+                <form>
+                    <lable>Newsletter: <input type="text" name="subscribe" placeholder="email"></lable>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    
+                </div>
+                <div class="card">
+                    
+                </div>
+                <div class="card">
+                    
+                </div>
+            </div>
+            <div class="foto1">
+                <p><span class="lore">L</span>orem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis.
+                Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, 
+                ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus 
+                fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus,
+                mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. 
+                Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, 
+                eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer 
+                lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor 
+                lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi 
+                ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede
+                cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum
+                a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. 
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. 
+                Sed vel lectus. Ut sagittis, ipsum dolor quam. </p>
+            </div>
+            <div class="foto2">
+                <p>yo</p>
+            </div>
         </section>
         <footer>
             
