Add routing in angular and add form

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li class="navLeft"><a href="#">API</a></li>
-                <li class="navLeft"><a href="#">ZALOGUJ</a></li>
+                <li class="navLeft"><a href="/login">ZALOGUJ</a></li>
                 <li class="navRight active"><a href="#">HOME</a></li>
             </ul>
         </nav>
