changes in client css

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -16,7 +16,6 @@
             </ul>
         </nav>
         <header>
-            <h1>COMAPNY NAME</h1>    
         </header>
         <section>
             <div class="sub">
@@ -25,17 +24,21 @@
                     <input type="submit" value="Submit">
                 </form>
             </div>
+        </section>
+        <section>    
             <div class="cards">
                 <div class="card">
-                    
+                    <img src="../../public/img/css3.jpg"></img>
                 </div>
                 <div class="card">
-                    
+                    <img src="../../public/img/html5.png"></img>
                 </div>
                 <div class="card">
-                    
+                    <img src="../../public/img/js.png"></img>
                 </div>
             </div>
+        </section>
+        <section>
             <div class="foto1">
                 <p><span class="lore">L</span>orem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis.
                 Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, 
@@ -51,9 +54,6 @@
                 a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. 
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. 
                 Sed vel lectus. Ut sagittis, ipsum dolor quam. </p>
-            </div>
-            <div class="foto2">
-                <p>yo</p>
             </div>
         </section>
         <footer>
