make login page to admin panel

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -20,7 +20,7 @@
         <section>
             <div class="sub">
                 <form>
-                    <lable>Newsletter: <input type="text" name="subscribe" placeholder="email"></lable>
+                    <lable>Newsletter: <input type="email" name="subscribe" placeholder="email" required></lable>
                     <input type="submit" value="Submit">
                 </form>
             </div>
