--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -1,1 +1,18 @@
-<a href="/admin/home">Login</a>
+<!DOCTYPE html>
+<html lang="pl">
+    <head>
+       <meta charset="utf-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+       <title>apiApp</title>
+       <link rel="stylesheet" href="../../public/styles/login.css" type="text/css" />
+    </head>
+    <body>
+        <div>
+            <form action="admin/home">
+                <input type="email" placeholder="email" required><br>
+                <input type="password" placeholder="password" required><br>
+                <button>Login</button>
+            </form>
+        </div>
+    </body>
+</html>
